# snake-game

./: .gitignore  CMakeLists.txt  README.md
src/GameLogic/: CMakeLists.txt
src/GameLogic/include/GameLogic/: Constants.h  Direction.h  Game.h
src/GameLogic/src/: Game.cpp
src/Input/: CMakeLists.txt
src/Input/include/Input/: ConsoleInput.h  SfmlInput.h
src/Input/src/: ConsoleInput.cpp  SfmlInput.cpp
src/Renderer/: CMakeLists.txt
src/Renderer/include/Renderer/: ConsoleRenderer.h  SfmlRenderer.h
src/Renderer/src/: ConsoleRenderer.cpp  SfmlRenderer.cpp
src/Window/: CMakeLists.txt
src/Window/include/Window/: GameWindow.h
src/Window/src/: GameWindow.cpp
src/app/: CMakeLists.txt  main.cpp
